--- a/app/estilos.html
+++ b/app/estilos.html
@@ -6,10 +6,14 @@
     <link rel="stylesheet" href="CSS/estilos.css">
     <!--estilos css-->
     <link rel="stylesheet" href="CSS/colores.css">
-
+    <link rel="stylesheet" href="CSS/transiciones.css">
+    <link rel="stylesheet" href="CSS/animate.css">
+    <link rel="stylesheet" href="CSS/hover.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
+
 <body>
-<h1 class="bg_green" style="color: aqua">estilos 1</h1>
+<h1 class="bg_green hvr-sweep-to-left" style="color: aqua">estilos 1</h1>
 
 <h1 id="rojo">estilos 2</h1>
 
@@ -17,6 +21,49 @@
     style="color: gray; background-color:yellow; border: 4px solid red "
 
 >Un h2</h2>
+
+<h1 class="titulo">Transiciones</h1>
+
+
+<h1 class="animated bounceIn">ANIMATED CSS</h1>
+
+<h1 class="hvr-sweep-to-left">Animated css hover  </h1>
+<h1> Bootstrap</h1>
+
+<h1> Grillas :D</h1>
+<p>col - tamaño responsive- #col </p>
+<div class="row">
+    <div class="col-md-1 bg-amarillo">1</div>
+    <div class="col-md-1 bg-azul">2</div>
+    <div class="col-md-1 bg-cafe">3</div>
+    <div class="col-md-1 bg-green">4</div>
+    <div class="col-md-1 bg-rojo">5</div>
+    <div class="col-md-1 bg-verde">6</div>
+    <div class="col-md-1 bg-amarillo">7</div>
+    <div class="col-md-1 bg-azul">8</div>
+    <div class="col-md-1 bg-cafe">9</div>
+    <div class="col-md-1 bg-verde">10</div>
+    <div class="col-md-1 bg-rojo">11</div>
+    <div class="col-md-1 bg-azul">12</div>
+
+    <div class="col-sm-4 pulse bg-verde">
+        <h1>dividir en cuatro</h1>
+        <div class="row">
+            <div class="col-sm-3 bg-rojo">1</div>
+            <div class="col-sm-3 bg-azul">2</div>
+            <div class="col-sm-3 bg-cafe">3</div>
+            <div class="col-sm-3 bg-green">4</div>
+        </div>
+
+    </div>
+    <div class="col-sm-4 bg-amarillo">2</div>
+    <div class="col-sm-4 bg-rojo">3</div>
+
+
+
+</div>
+
+<h1 class="transicion-2d">transicion 2d</h1>
 
 </body>
 
